// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Metric table for the change_failure_rate table row when the data is loaded renders the metric values 1`] = `
"Change failure rate  
    Percentage of deployments that cause an incident in production.
    
      Go to docs
      
        20.0%
       
        40.0%
       
        60.0%
       
        20.0%
       
        40.0%
       
        60.0%
       
  100.0%"
`;

exports[`Metric table for the code_suggestions_usage_rate table row when the data is loaded renders the metric values 1`] = `
"Code Suggestions usage  
    Monthly user engagement with AI Code Suggestions. Percentage ratio calculated as monthly unique Code Suggestions users / total monthly unique code contributors.
    
      Go to docs
      
        5.0%
       The usage data may be incomplete due to backend calculations starting after upgrade to GitLab 16.11. For more information, see epic 12978.
        10.0%
       The usage data may be incomplete due to backend calculations starting after upgrade to GitLab 16.11. For more information, see epic 12978.
        25.0%
       The usage data may be incomplete due to backend calculations starting after upgrade to GitLab 16.11. For more information, see epic 12978.
        5.0%
       The usage data may be incomplete due to backend calculations starting after upgrade to GitLab 16.11. For more information, see epic 12978.
        10.0%
       The usage data may be incomplete due to backend calculations starting after upgrade to GitLab 16.11. For more information, see epic 12978.
        25.0%
       The usage data may be incomplete due to backend calculations starting after upgrade to GitLab 16.11. For more information, see epic 12978.
  100.0%"
`;

exports[`Metric table for the cycle_time table row when the data is loaded renders the metric values 1`] = `
"Cycle time  
    Median time from the earliest commit of a linked issue's merge request to when that issue is closed.
    
      Go to docs
      
        1.0 d
       
        2.0 d
       
        4.0 d
       
        1.0 d
       
        2.0 d
       
        4.0 d
       
  100.0%"
`;

exports[`Metric table for the deployment_frequency table row when the data is loaded renders the metric values 1`] = `
"Deployment frequency  
    Average number of deployments to production per day. This metric measures how often value is delivered to end users.
    
      Go to docs
      
        10.0/d
       
        20.0/d
       
        40.0/d
       
        10.0/d
       
        20.0/d
       
        40.0/d
       
  100.0%"
`;

exports[`Metric table for the lead_time table row when the data is loaded renders the metric values 1`] = `
"Lead time  
    Median time from issue created to issue closed.
    
      Go to docs
      
        1.0 d
       
        2.0 d
       
        4.0 d
       
        1.0 d
       
        2.0 d
       
        4.0 d
       
  100.0%"
`;

exports[`Metric table for the vulnerability_critical table row when the data is loaded renders the metric values 1`] = `
"Critical vulnerabilities over time  
    Number of critical vulnerabilities identified per month.
    
      Go to docs
      
        40
       
        20
       
        10
       
        40
       
        20
       
        10
       
  50.0%"
`;
